--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.0.0-alpha.6",
+    "font-awesome": "^4.7.0",
     "react": "^15.6.1",
-    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.10"
   },
